partman-ext2r0 (0.01) UNRELEASED; urgency=low

  * New package partman-ext2r0 based on partman-ext3 which adds support
    for the ext2 revision 0 file system needed by some old boot loaders
    to boot from (e.g. on MIPS based Cobalt and some ARM based Netwinder
    machine).
  * Martin Michlmayr
    - Put this file system after more important file systems in the list,
      but before FAT.
    - Use /boot as the default mount point.

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 15 May 2004 00:29:16 +0100
