@@ -8,7 +8,8 @@ Standards-Version: 3.5.6
 
 Package: partman-ext2r0
 XC-Package-Type: udeb
-Architecture: all
+Architecture: arm mipsel
+XB-Subarchitecture: ${subarch}
 Depends: e2fsprogs-udeb, ext2-modules, partman-basicfilesystems
 Provides: partman-filesystem
 Description: Add to partman support for old ext2 (revision 0)
