@@ -8,6 +8,8 @@ partman-ext2r0 (0.01) UNRELEASED; urgency=low
     - Put this file system after more important file systems in the list,
       but before FAT.
     - Use /boot as the default mount point.
+    - Make the package arch: arm mipsel and only provide it for
+      arm/netwinder and mipsel/cobalt.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Sat, 15 May 2004 00:29:16 +0100
 
